<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/viewImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:src="@mipmap/ic_launcher">
        </ImageView>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:hint="@string/lbl_name"/>

    </LinearLayout>

    <EditText
        android:id="@+id/editTextDescript"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_descript"/>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_qtd"/>

    <EditText
        android:id="@+id/editTextMinAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_min_amount"/>

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_price"/>

    <Button
        android:id="@+id/buttonInclude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_include"/>

</LinearLayout>